--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -33,7 +33,7 @@ window#waybar {
     padding: 0 12px;
 }
 
-#clock, #cpu, #memory, #disk, #pulseaudio, #battery {
+#clock, #cpu, #memory, #disk, #pulseaudio, #battery, #network {
     padding: 0 12px;
     margin: 0 2px;
     background: #313244;
